--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+:root {
+
+  /*offsets*/
+  --offset-xs: 4px;
+  --offset-sm: 8px;
+  --offset-md: 16px;
+  --offset-md2: 24px;
+  --offset-lg: 32px;
+
+position: relative;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
